[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/skyline.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, 104 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 129.855, 389.837 )

[node name="MineSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="CollectibleSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="WaveSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="CoffeeSpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="score_changed" from="Player" to="." method="_on_Player_score_changed"]
[connection signal="timeout" from="MineSpawnTimer" to="." method="_on_MineSpawnTimer_timeout"]
[connection signal="timeout" from="CollectibleSpawnTimer" to="." method="_on_CollectibleSpawnTimer_timeout"]
[connection signal="timeout" from="WaveSpawnTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="CoffeeSpawnTimer" to="." method="_on_CoffeeSpawnTimer_timeout"]
